# RationalRecipes

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  RELEASES.md  columns.py  diff  diff.py  difference.py  ingredient.py  merge.py  pyproject.toml  ratio.py  read.py  rebuild-catalog.sh  statistics.py  stats  stats.py  test  units.py  utils.py
.beads/: metadata.json
.beads/hooks/: pre-commit
.github/workflows/: ci.yml  deploy-pages.yml
RationalRecipes/: __init__.py  columns.py  diff_cli.py  diff_main.py  ingredient.py  merge.py  ratio.py  read.py  statistics.py  stats_cli.py  stats_main.py  units.py  utils.py
artifacts/: curated_recipes.json  wdc_extraction_cache_swedish.json
docs/: queue.md  recipe-scraping-phase1.md  wdc_extraction_spike.md  wdc_recon.md
docs/design/: full-catalog.md  phase-5e-investigation.md  recipe-drops.md  recipe-scraping.md
docs/drops/: README.md
sample_input/: bechamel.csv  blueberry_muffins.csv  blueberry_pancake.csv  chocolate_fudge.csv  chocolate_sponge.csv  crumble.csv  kanelbullar.csv  lakates.csv  merigues.csv  oven_pancake.csv  plain_muffins.csv  shortcrust_pastry.csv
sample_input/crepes/: english_recipe_crepes.csv  english_recipe_pannkisar.csv  french_recipe_crepes.csv  ruhlman_crepes.csv  swedish_recipe_pannkisar.csv
schema/: curated_recipes.schema.json  example.json
scripts/: backfill_density.py  backfill_directions.py  backfill_ingredient_fold.py  benchmark_batched_parse.py  benchmark_models.py  build_db.py  corpus_title_survey.py  diagnose_component_structure.py  discover_fold_candidates.py  download_data.sh  editor.py  eval_models.py  explore_groups.py  export_catalog_json.py  export_curated_recipes.py  import_merged_artifacts.py  inspect_variant_provenance.py  invalidate_non_english_parses.py  merged_to_catalog.py  migrate_curated_to_db.py  profile_pass3.py  render_drop.py  review_variants.py  scrape_catalog.py  scrape_merged.py  scrape_progress.py  scrape_to_csv.py  shadow_compare_cache.py  shadow_compare_ner.py  shadow_compare_parse.py  survey_wdc_languages.py  synthesize_instructions.py  tally_recipenlg_misses.py  tally_wdc_misses.py  wdc_extraction_spike.py  wdc_multilingual_spike.py  wdc_pannkakor.py
scripts/benchmark_data/: _label_swedish.py  batched_speed.json  batched_speed_full.json  english_messy_candidates.jsonl  english_messy_gold.jsonl  multilingual_candidates.jsonl  multilingual_gold.jsonl  results-v2.json  results-variance.json  results.json  review_gold.py  sample_messy_lines.py  sample_multilingual_lines.py  sample_swedish_structured.py  shadow_cache_baseline.json  shadow_cache_dfm.json  shadow_cache_final.json  shadow_cache_final_dup.json  shadow_compare.json  shadow_ner.json  swedish_ica_se_candidates.jsonl  swedish_ica_se_names_gold.json  swedish_ica_se_structured_gold.jsonl  wdc_language_ranking.txt
src/rational_recipes/: __init__.py  catalog.py  catalog_db.py  categories.py  columns.py  corpus_title_survey.py  diff_cli.py  diff_main.py  difference.py  discover.py  discover_cli.py  errors.py  ingredient.py  merge.py  normalize.py  output.py  provenance.py  ratio.py  ratio_format.py  read.py  review.py  statistics.py  stats_cli.py  stats_main.py  units.py  utils.py
tests/: __init__.py  test.py  test_backfill_categories.py  test_backfill_density.py  test_backfill_directions.py  test_benchmark_scoring.py  test_catalog.py  test_catalog_db.py  test_categories.py  test_corpus_title_survey.py  test_curated_export.py  test_diagnose_component_structure.py  test_diff.py  test_difference.py  test_discover.py  test_editor.py  test_eval_models.py  test_export_catalog_json.py  test_ingredient.py  test_ingredient_fold.py  test_inspect_variant_provenance.py  test_merge.py  test_migrate_curated_to_db.py  test_normalize.py  test_output.py  test_pass3_titles.py  test_profile_pass3.py  test_provenance.py  test_ratio.py  test_read.py  test_render_drop.py  test_review.py  test_review_variants.py  test_scrape_canonical.py  test_scrape_catalog.py  test_scrape_comparison.py  test_scrape_cross_language_pannkakor.py  test_scrape_grouping.py  test_scrape_loaders.py  test_scrape_manifest.py  (+14 more)
tests/scrape/: test_ner_match.py  test_regex_parse.py  test_scrape_parse.py  test_two_pass_pipeline.py  (+1 more)
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/src/: db.ts  (+21 more)
(+46 files in other folders)
