[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RationalRecipes"
version = "1.0.0"
description = "Statistical analysis and comparison of recipe ratios"
requires-python = ">=3.12"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "jsonschema",
    "types-jsonschema",
]

[project.scripts]
rr-discover = "rational_recipes.discover_cli:run"
rr-scrape-catalog = "rational_recipes.cli.scrape_catalog:run"
rr-review-variants = "rational_recipes.cli.review_variants:main"
rr-corpus-title-survey = "rational_recipes.cli.corpus_title_survey:run"
rr-migrate-curated = "rational_recipes.cli.migrate_curated_to_db:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rational_recipes = ["data/*.db"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "scripts"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.lint.per-file-ignores]
"src/rational_recipes/scrape/parse.py" = ["E501"]  # LLM prompt strings

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "scripts"
